# YGO_deck_extension

./: .gitignore  PrivacyPolicy.md  README.md
data/: fromConstant.tsv  ygo_db_simple.csv
docker/: Dockerfile  Procfile  docker-compose.yml  pyproject.toml  setup.cfg
docker/old/: ygo_heroku_cp.py  ygo_heroku_old.py
docker/tmp/src/: pyproject.toml  ygo_heroku.py
docker/ygo_db_update/: __init__.py  ygo_db_update.py  ygo_db_update_json.py
intro/: NEWS_v2p1.md  NEWS_v2p4.md
intro/imgs/: 覇王魔術師 (14).jpg:Zone.Identifier
src/: content_script.js  deck_edit.css  deck_edit.html  deck_edit.js  deck_edit_script.js  deck_edit_search.html  deck_search_js.html  future_work.md  gtm.js  manifest.json  update_memo.md
src/css/: Faq_details.css  card_details.css  card_search.css  content_script.css  option.css
src/data/: ygo_db_complex.tsv  ygo_db_simple.tsv
src/js/: sql-wasm.min.js
src/script/: .memo.js  card_search_script.js  content_script.js  db_functions.js  listen.js  main_functions.js  options.html  options.js
