[tool.poetry]
name = "ygo-db-update"
version = "1.0.0"
description = "update database for YGO DB Chrome Extension"
authors = ["TomoTom0 <arukuki4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.31.0"
bs4 = ">=0.0.1"
python-dotenv = ">=1.0.0"
pandas = ">=2.0.3"
DateTime = ">=5.2"
pathlib = ">=1.0.1"
argparse = ">=1.4.0"
urllib3 = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
